# Todo_APP

./: .dockerignore  Dockerfile  Jenkinsfile  README.md  database.py  docker-compose.yaml  environment.yml  main.py  pyproject.toml  setup_todo_app.sh  todos.http
app/: main.py
app/api/v1/endpoints/: todos.py
app/core/: config.py
app/models/: todo.py
app/schemas/: todo.py
jenkins/: Dockerfile  Dockerfile.ci  Jenkinsfile
tests/: conftest.py  test_todos.py
